--- a/NetCore/NetCore.csproj
+++ b/NetCore/NetCore.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Folder Include="app\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,4 +19,7 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="app\" />
+  </ItemGroup>
 </Project>
